Create layout for LibraryActivity.

--- a/Project/app/src/main/AndroidManifest.xml
+++ b/Project/app/src/main/AndroidManifest.xml
@@ -10,7 +10,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.BookReadingApp_Android">
         <activity
-            android:name=".MainActivity"
+            android:name=".LibraryActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
