Add pull to refresh functionality

--- a/Project/app/src/main/AndroidManifest.xml
+++ b/Project/app/src/main/AndroidManifest.xml
@@ -9,13 +9,14 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.BookReadingApp_Android" >
+        android:theme="@style/Theme.BookReadingApp_Android">
         <activity
             android:name=".activities.settings.SettingsActivity"
             android:exported="false" />
         <activity
             android:name=".activities.home.HomeActivity"
-            android:exported="true" >
+            android:exported="true"
+            android:windowSoftInputMode="stateAlwaysHidden|adjustPan">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
