--- a/Project/app/build.gradle
+++ b/Project/app/build.gradle
@@ -52,6 +52,7 @@ dependencies {
     kapt("com.google.dagger:hilt-android-compiler:2.38.1")
     implementation("org.jetbrains.kotlinx:kotlinx-coroutines-android:1.4.1")
     implementation("org.jetbrains.kotlinx:kotlinx-coroutines-core:1.4.1")
+    implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.1.0'
 }
 
 // Allow references to generated code
