--- a/Project/app/build.gradle
+++ b/Project/app/build.gradle
@@ -56,6 +56,7 @@ dependencies {
 
     def roomVersion = "2.4.2"
 
+    implementation "androidx.room:room-common:$roomVersion"
     implementation "androidx.room:room-runtime:$roomVersion"
     annotationProcessor "androidx.room:room-compiler:$roomVersion"
 
