--- a/Project/app/build.gradle
+++ b/Project/app/build.gradle
@@ -45,6 +45,10 @@ dependencies {
     implementation "androidx.appcompat:appcompat:1.4.1"
     implementation "com.google.android.material:material:1.5.0"
     implementation "androidx.constraintlayout:constraintlayout:2.1.3"
+    implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.1.0"
+    implementation "androidx.fragment:fragment-ktx:1.4.1"
+    implementation "androidx.activity:activity-ktx:1.4.0"
+    implementation "androidx.collection:collection-ktx:1.2.0"
 
     androidTestImplementation "androidx.test.ext:junit:1.1.3"
     androidTestImplementation "androidx.test.espresso:espresso-core:3.4.0"
@@ -54,8 +58,6 @@ dependencies {
 
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.5.2"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.5.2"
-
-    implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.1.0"
 
     def roomVersion = "2.4.2"
     implementation "androidx.room:room-common:$roomVersion"
@@ -78,6 +80,8 @@ dependencies {
 
     def lifecycle_version = "2.4.1"
     def arch_version = "2.1.0"
+    // Coroutine scope support
+    implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.4.1"
     // ViewModel
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
     // ViewModel utilities for Compose
