--- a/Project/app/build.gradle
+++ b/Project/app/build.gradle
@@ -50,56 +50,69 @@ dependencies {
     implementation "androidx.activity:activity-ktx:1.4.0"
     implementation "androidx.collection:collection-ktx:1.2.0"
 
-    androidTestImplementation "androidx.test.ext:junit:1.1.3"
-    androidTestImplementation "androidx.test.espresso:espresso-core:3.4.0"
-
+    // Hilt
     implementation "com.google.dagger:hilt-android:2.38.1"
     kapt "com.google.dagger:hilt-android-compiler:2.38.1"
 
+    // Coroutine
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.5.2"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.5.2"
 
+    // Room
     def roomVersion = "2.4.2"
     implementation "androidx.room:room-common:$roomVersion"
     implementation "androidx.room:room-runtime:$roomVersion"
     annotationProcessor "androidx.room:room-compiler:$roomVersion"
-    // To use Kotlin annotation processing tool (kapt)
     kapt "androidx.room:room-compiler:$roomVersion"
-    // optional - Kotlin Extensions and Coroutines support for Room
     implementation "androidx.room:room-ktx:$roomVersion"
-    // optional - RxJava2 support for Room
-    implementation "androidx.room:room-rxjava2:$roomVersion"
-    // optional - RxJava3 support for Room
-    implementation "androidx.room:room-rxjava3:$roomVersion"
-    // optional - Guava support for Room, including Optional and ListenableFuture
-    implementation "androidx.room:room-guava:$roomVersion"
-    // optional - Test helpers
-    testImplementation "androidx.room:room-testing:$roomVersion"
     // optional - Paging 3 Integration
     implementation "androidx.room:room-paging:2.5.0-alpha01"
 
+    // Viewmodel - Livedata - Lifecycle
     def lifecycle_version = "2.4.1"
-    def arch_version = "2.1.0"
-    // Coroutine scope support
     implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.4.1"
-    // ViewModel
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
-    // ViewModel utilities for Compose
-    implementation "androidx.lifecycle:lifecycle-viewmodel-compose:$lifecycle_version"
-    // LiveData
     implementation "androidx.lifecycle:lifecycle-livedata-ktx:$lifecycle_version"
-    // Saved state module for ViewModel
     implementation "androidx.lifecycle:lifecycle-viewmodel-savedstate:$lifecycle_version"
-    // alternately - if using Java8, use the following instead of lifecycle-compiler
-    implementation "androidx.lifecycle:lifecycle-common-java8:$lifecycle_version"
-    // optional - helpers for implementing LifecycleOwner in a Service
     implementation "androidx.lifecycle:lifecycle-service:$lifecycle_version"
-    // optional - ProcessLifecycleOwner provides a lifecycle for the whole application process
     implementation "androidx.lifecycle:lifecycle-process:$lifecycle_version"
-    // optional - ReactiveStreams support for LiveData
     implementation "androidx.lifecycle:lifecycle-reactivestreams-ktx:$lifecycle_version"
-    // optional - Test helpers for LiveData
-    testImplementation "androidx.arch.core:core-testing:$arch_version"
+
+    // Room test
+    androidTestImplementation "androidx.room:room-testing:$roomVersion"
+
+    // Test helpers for LiveData
+    androidTestImplementation "androidx.arch.core:core-testing:2.1.0"
+
+    // JUnit
+    testImplementation "junit:junit:4.13.2"
+    // Mockito framework
+    testImplementation "org.mockito:mockito-core:4.0.0"
+    // Mockito-kotlin
+    testImplementation "org.mockito.kotlin:mockito-kotlin:4.0.0"
+    // Mockk framework
+    testImplementation "io.mockk:mockk:1.12.3"
+
+    // Robolectric environment
+    androidTestImplementation "androidx.test:core:1.4.0"
+    androidTestImplementation "androidx.test:core-ktx:1.4.0"
+
+    // AndroidJUnitRunner and JUnit Rules
+    androidTestImplementation "androidx.test:runner:1.4.0"
+    androidTestImplementation "androidx.test:rules:1.4.0"
+
+    // Assertions
+    androidTestImplementation "androidx.test.ext:junit:1.1.3"
+    androidTestImplementation "androidx.test.ext:truth:1.4.0"
+
+    // Espresso dependencies
+    androidTestImplementation "androidx.test.espresso:espresso-core:3.4.0"
+    androidTestImplementation "androidx.test.espresso:espresso-contrib:3.4.0"
+    androidTestImplementation "androidx.test.espresso:espresso-intents:3.4.0"
+    androidTestImplementation "androidx.test.espresso:espresso-accessibility:3.4.0"
+    androidTestImplementation "androidx.test.espresso:espresso-web:3.4.0"
+    androidTestImplementation "androidx.test.espresso.idling:idling-concurrent:3.4.0"
+    androidTestImplementation "androidx.test.espresso:espresso-idling-resource:3.4.0"
 }
 
 // Allow references to generated code
