--- a/Project/app/build.gradle
+++ b/Project/app/build.gradle
@@ -81,7 +81,7 @@ dependencies {
     def lifecycle_version = "2.4.1"
     def arch_version = "2.1.0"
     // Coroutine scope support
-    implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.4.1"
+    implementation "androidx.lifecycle:lifecycle-runtime-ktx:$lifecycle_version"
     // ViewModel
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
     // ViewModel utilities for Compose
