--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,6 +2,7 @@ plugins {
     id "com.android.application"
     id "kotlin-android"
     id "kotlin-kapt"
+    id "kotlin-parcelize"
     id "dagger.hilt.android.plugin"
 }
 
@@ -47,6 +48,8 @@ android {
 }
 
 dependencies {
+    implementation fileTree(dir: "libs", include: ["*.jar"])
+
     implementation "androidx.core:core-ktx:1.7.0"
     implementation "androidx.appcompat:appcompat:1.4.1"
     implementation "com.google.android.material:material:1.5.0"
@@ -121,8 +124,7 @@ dependencies {
     androidTestImplementation "androidx.test.espresso:espresso-idling-resource:3.4.0"
 
     // PDF renderer
-    // implementation "com.tom-roush:pdfbox-android:2.0.18.0"
-    implementation 'com.github.afreakyelf:Pdf-Viewer:1.0.7'
+    implementation project(":pdfviewer")
 }
 
 // Allow references to generated code
