--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,6 +52,7 @@ android {
 dependencies {
     implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation project(":shared")
+    implementation project(":pdfviewer")
 
     implementation "androidx.core:core-ktx:1.7.0"
     implementation "androidx.appcompat:appcompat:1.4.1"
@@ -61,6 +62,9 @@ dependencies {
     implementation "androidx.fragment:fragment-ktx:1.4.1"
     implementation "androidx.activity:activity-ktx:1.4.0"
     implementation "androidx.collection:collection-ktx:1.2.0"
+    implementation "androidx.preference:preference-ktx:1.2.0"
+    implementation "androidx.navigation:navigation-fragment-ktx:2.4.2"
+    implementation "androidx.navigation:navigation-ui-ktx:2.4.2"
 
     // Hilt
     implementation 'com.google.dagger:hilt-android:2.41'
@@ -124,9 +128,6 @@ dependencies {
     androidTestImplementation "androidx.test.espresso:espresso-web:3.4.0"
     androidTestImplementation "androidx.test.espresso.idling:idling-concurrent:3.4.0"
     androidTestImplementation "androidx.test.espresso:espresso-idling-resource:3.4.0"
-
-    // PDF renderer
-    implementation project(":pdfviewer")
 }
 
 // Allow references to generated code
