Add bookmark feature

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,6 +26,9 @@
             android:name=".activities.reader.ReaderActivity"
             android:exported="false" />
         <activity
+            android:name=".activities.bookmark.BookmarkActivity"
+            android:exported="false" />
+        <activity
             android:name=".activities.home.HomeActivity"
             android:exported="true"
             android:windowSoftInputMode="stateAlwaysHidden|adjustPan">
